--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Video -->
-    <video id="video" controls height="360px" width="640px" hidden></video>
+    <video id="video" controls height="360" width="640" hidden></video>
     <!-- Button -->
     <div class="button-container">
         <button id="button">START</button>
